[package]
name = "imgwm"
version = "0.1.0"
edition = "2021"

[dependencies]
wayland-server = "0.31"
wayland-protocols = { version = "0.31", features = ["server"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nix = { version = "0.27", features = ["event"] }
calloop = "0.12"
